@@ -1,3 +1,6 @@
+2009-04-06 Richard Dale  <richard.j.dale@gmail.com>
+* Added inspect() and pretty_print() methods to the WModelIndex class
+
 2009-04-03 Richard Dale  <richard.j.dale@gmail.com>
 * When the Ruby runtime starts it sets up signal handlers for all signals,
 so that they can be handled with Signal#trap. However, that was disabling
